aws/NetworkAcls-ap-northeast-2.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "SubnetId": "subnet-a0a6fbc9", 
     "NetworkAclId": "acl-f0bdef99", 
     "NetworkAclAssociationId": "aclassoc-1d2ea975"
    }, 
    {
     "SubnetId": "subnet-2664f36b", 
     "NetworkAclId": "acl-f0bdef99", 
     "NetworkAclAssociationId": "aclassoc-1e2ea976"
    }
   ], 
   "NetworkAclId": "acl-f0bdef99", 
   "VpcId": "vpc-732a661a", 
   "Tags": [], 
   "Entries": [
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }, 
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }
   ], 
   "IsDefault": true
  }
 ]
}
